--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,8 @@
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#   Local Database
-spring.datasource.url=jdbc:mysql://localhost:3306/ApartmentManagementSystem?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=@Nguoibian123456789
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306;databaseName=ApartmentManagementSystem
-#spring.datasource.username=root
-#spring.datasource.password=@Nguoibian123456789
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+spring.datasource.url=jdbc:mysql://localhost:3306/dsct
+spring.datasource.username=root
+spring.datasource.password=123456
+
+dsct.jwtSecret=DSCTSWP391
+dsct.jwtExpirationMs=8600000
